[project]
name = "clinisight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.129.0",
    "groq>=1.0.0",
    "lxml>=6.0.2",
    "mcp[cli]>=1.26.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
    "uvicorn>=0.40.0",
]
